@@ -17,11 +17,6 @@ import java.util.Locale;
 
 import static cz.maxtechnik.opm.client.screen.EditorColors.*;
 
-/**
- * Hlavní screen editoru receptů.
- * Koordinuje RecipeEditorData (data) + EditorRenderer (vizuál).
- * Drží pouze UI stav (scroll, drag, focus) a input handling.
- */
 public class RecipeEditorScreen extends Screen {
 
     // ── Závislosti ────────────────────────────────────────────────────────────
@@ -262,11 +257,10 @@ public class RecipeEditorScreen extends Screen {
             renderFavorites(g, mx, my, favX, favCols, favListY, favListH);
         } else {
             // Delete + Unload nad seznamem vlevo
-            int delX = startX;
-            boolean hDel = r.hit(mx, my, delX, invY + 4, 50, 14);
-            boolean hUnl = r.hit(mx, my, delX + 54, invY + 4, 50, 14);
-            r.drawBtn(g, "Delete", delX, invY + 4, 50, hDel, 0xFF4A1A1A, 0xFF6A2222);
-            r.drawBtn(g, "Unload", delX + 54, invY + 4, 50, hUnl, C_BTN, C_BTN_H);
+            boolean hDel = r.hit(mx, my, startX, invY + 4, 50, 14);
+            boolean hUnl = r.hit(mx, my, startX + 54, invY + 4, 50, 14);
+            r.drawBtn(g, "Delete", startX, invY + 4, 50, hDel, 0xFF4A1A1A, 0xFF6A2222);
+            r.drawBtn(g, "Unload", startX + 54, invY + 4, 50, hUnl, C_BTN, C_BTN_H);
             renderRecipeList(g, mx, my, startX, listY, listH);
         }
     }
@@ -454,9 +448,8 @@ public class RecipeEditorScreen extends Screen {
         if (showRecipesList) {
             int recW = 9*(SS+SP);
             int listY = invY + 22;
-            int delX2 = startX;
-            if (r.hit(mx, my, delX2, invY + 4, 50, 14))      { deleteRecipe(); return true; }
-            if (r.hit(mx, my, delX2 + 54, invY + 4, 50, 14)) { unloadRecipe(); return true; }
+            if (r.hit(mx, my, startX, invY + 4, 50, 14))      { deleteRecipe(); return true; }
+            if (r.hit(mx, my, startX + 54, invY + 4, 50, 14)) { unloadRecipe(); return true; }
             for (int i = 0; i < d.savedRecipeFiles.size(); i++) {
                 int ry = (int)(listY + i * 14 - recipeListScroll);
                 if (r.hit(mx, my, startX, ry, recW, 14)) {
@@ -567,6 +560,96 @@ public class RecipeEditorScreen extends Screen {
     @Override
     public boolean mouseScrolled(double mx, double my, double sx, double sy) {
         if (r.hit((int)mx,(int)my, pX, editorY, leftW, editorH)) {
+            StationType t = tabs.get(tabIdx);
+            int[] gr = gridParams(t);
+            int mY = (int)(my + scrollOffset);
+            if (gr != null) {
+                List<ItemStack> gl = gridList(t);
+                for (int row=0;row<gr[1];row++) for (int col=0;col<gr[0];col++) {
+                    int bx=gr[2]+col*(gr[4]+gr[5]), by=gr[3]+row*(gr[4]+gr[6]);
+                    if (r.hit((int)mx,mY,bx,by,gr[4],gr[4])) {
+                        int idx=row*gr[0]+col;
+                        if(idx<gl.size()) {
+                            ItemStack s = gl.get(idx);
+                            if (!s.isEmpty()) {
+                                s.setCount(Math.clamp(s.getCount() + (int)sy, 1, 64));
+                                return true;
+                            }
+                        }
+                    }
+                }
+            }
+            int cx = pX + leftW / 2;
+            switch (t) {
+                case CRAFTING -> {
+                    int cy=editorY+20+30, ax=cx-70+3*(SS+SP)+15, ay=cy+SS+SP;
+                    if (r.hit((int)mx, mY, ax + 20, ay - 9, SS, SS)) {
+                        d.craftCount = Math.clamp(d.craftCount + (int)sy, 1, 64);
+                        return true;
+                    }
+                }
+                case MECH_CRAFTING -> {
+                    int cy=editorY+50, sz=16, pad=1, gW=9*(sz+pad), sX=cx-gW/2-40, ay=cy+(9*(sz+pad))/2-4;
+                    if (r.hit((int)mx, mY, sX + gW + 15 + 20, ay - 4, SS, SS)) {
+                        d.craftCount = Math.clamp(d.craftCount + (int)sy, 1, 64);
+                        return true;
+                    }
+                }
+                case FURNACE -> {
+                    int cy=editorY+60;
+                    if (r.hit((int)mx, mY, cx - 60 + SS + 40, cy, SS, SS)) {
+                        d.furnCount = Math.clamp(d.furnCount + (int)sy, 1, 64);
+                        return true;
+                    }
+                }
+                case STONECUTTER -> {
+                    int cy=editorY+40;
+                    if (r.hit((int)mx, mY, cx - 50 + SS + 40, cy, SS, SS)) {
+                        d.stoneCount = Math.clamp(d.stoneCount + (int)sy, 1, 64);
+                        return true;
+                    }
+                }
+                case SMITHING -> {
+                    int cy = editorY + 40, step = SS + 36, totalW = 3 * step + 20 + SS, sX = cx - totalW / 2;
+                    if (r.hit((int)mx, mY, sX + 3 * step + 16, cy, SS, SS)) {
+                        d.smCount = Math.clamp(d.smCount + (int)sy, 1, 64);
+                        return true;
+                    }
+                }
+                case PRESSING -> {
+                    if (!d.pressBasin) {
+                        int gridY = editorY + 60, sX = cx - 70;
+                        if (r.hit((int)mx, mY, sX + SS + 50, gridY, SS, SS)) {
+                            d.pressCount = Math.clamp(d.pressCount + (int)sy, 1, 64);
+                            return true;
+                        }
+                    }
+                }
+                case CRUSHING -> {
+                    int cy=editorY+50, sx4=cx-120, outX=sx4+SS+30, colW=110;
+                    for (int i = 0; i < 8; i++) {
+                        if (r.hit((int)mx, mY, outX + (i / 4) * colW, cy + (i % 4) * (SS + 12), SS, SS)) {
+                            CrushingOutput co = d.crushOuts.get(i);
+                            if (!co.isEmpty()) {
+                                co.count = Math.clamp(co.count + (int)sy, 1, 64);
+                                return true;
+                            }
+                        }
+                    }
+                }
+                case FAN -> {
+                    int cy=editorY+50, sx5=cx-120, outX=sx5+SS+30, colW=110;
+                    for (int i = 0; i < 4; i++) {
+                        if (r.hit((int)mx, mY, outX + (i / 2) * colW, cy + (i % 2) * (SS + 12), SS, SS)) {
+                            CrushingOutput co = d.fanOuts.get(i);
+                            if (!co.isEmpty()) {
+                                co.count = Math.clamp(co.count + (int)sy, 1, 64);
+                                return true;
+                            }
+                        }
+                    }
+                }
+            }
             scrollOffset = (float) Math.clamp(scrollOffset - sy * 20, 0, maxScroll); return true;
         }
         int startX = pX + 10;
@@ -724,7 +807,7 @@ public class RecipeEditorScreen extends Screen {
         if (gr != null) {
             List<ItemStack> gl = gridList(t);
             for (int row=0;row<gr[1];row++) for (int col=0;col<gr[0];col++) {
-                int bx=gr[2]+col*(gr[4]+gr[5]), by=gr[3]+row*(gr[4]+gr[5]);
+                int bx=gr[2]+col*(gr[4]+gr[5]), by=gr[3]+row*(gr[4]+gr[6]);
                 if (r.hit(mx,mY,bx,by,gr[4],gr[4])) { gl.set(row*gr[0]+col, s.copy()); return; }
             }
         }
@@ -734,9 +817,31 @@ public class RecipeEditorScreen extends Screen {
             case FURNACE  -> { int cy=editorY+60; if(r.hit(mx,mY,cx-60,cy,SS,SS)) d.furnIn=s.copy(); if(r.hit(mx,mY,cx-60+SS+40,cy,SS,SS)) d.furnOut=s.copy(); }
             case STONECUTTER -> { int cy=editorY+40; if(r.hit(mx,mY,cx-50,cy,SS,SS)) d.stoneIn=s.copy(); if(r.hit(mx,mY,cx-50+SS+40,cy,SS,SS)) d.stoneOut=s.copy(); }
             case SMITHING -> {int cy = editorY + 40;int step = SS + 36;int totalW = 3 * step + 20 + SS;int sx = cx - totalW / 2;if (r.hit(mx, mY, sx, cy, SS, SS)) d.smTemplate = s.copy();else if (r.hit(mx, mY, sx + step, cy, SS, SS)) d.smBase = s.copy();else if (r.hit(mx, mY, sx + 2 * step, cy, SS, SS)) d.smAddition = s.copy();else if (r.hit(mx, mY, sx + 3 * step + 16, cy, SS, SS)) d.smResult = s.copy();}
-            case MECH_CRAFTING -> { int cy=editorY+20, sz=16, pad=1, gW=9*(sz+pad), sx=cx-gW/2-40, ay=cy+(9*(sz+pad))/2-4; if(r.hit(mx,mY,sx+gW+15+20,ay-4,SS,SS)) d.craftResult=s.copy(); }
-            case MIXING -> { int cy=editorY+45, sx2=cx-130, fluidY=cy+3*(SS+SP)+20; for(int i=0;i<4;i++){int rr=i/2,cc=i%2; if(r.hit(mx,mY,sx2+cc*70,fluidY+rr*35,SS,SS)){d.mixFluidIng.get(i).proxy=s.copy();return;}} if(r.hit(mx,mY,cx+10,cy,SS,SS)) d.mixResult=s.copy(); if(r.hit(mx,mY,cx+70,cy,SS,SS)) d.mixFluidResult.proxy=s.copy(); }
-            case PRESSING -> { int cy=editorY+60, sx3=cx-70; if(r.hit(mx,mY,sx3,cy,SS,SS)) d.pressIn=s.copy(); if(r.hit(mx,mY,sx3+SS+50,cy,SS,SS)) d.pressOut=s.copy(); if(d.pressBasin&&r.hit(mx,mY,sx3+SS+110,cy,SS,SS)) d.pressFluidOut.proxy=s.copy(); }
+            case MECH_CRAFTING -> { int cy=editorY+50, sz=16, pad=1, gW=9*(sz+pad), sx=cx-gW/2-40, ay=cy+(9*(sz+pad))/2-4; if(r.hit(mx,mY,sx+gW+15+20,ay-4,SS,SS)) d.craftResult=s.copy(); }
+            case MIXING -> { int cy=editorY+45, sx2=cx-130, fluidY=cy+95; for(int i=0;i<4;i++){int rr=i/2,cc=i%2; if(r.hit(mx,mY,sx2+cc*70,fluidY+rr*35,SS,SS)){d.mixFluidIng.get(i).proxy=s.copy();return;}} if(r.hit(mx,mY,cx+10,cy,SS,SS)) d.mixResult=s.copy(); if(r.hit(mx,mY,cx+70,cy,SS,SS)) d.mixFluidResult.proxy=s.copy(); }
+            case PRESSING -> {
+                if (d.pressBasin) {
+                    int gridY = editorY + 75, sx = cx - 130, rx = cx + 30;
+                    for (int i = 0; i < 4; i++) {
+                        int col = i % 2, row = i / 2;
+                        if (r.hit(mx, mY, rx + col * (SS + 4), gridY + 5 + row * (SS + 4), SS, SS)) {
+                            d.pressOuts.set(i, s.copy());
+                            return;
+                        }
+                    }
+                    int fluidY = gridY + 95;
+                    for (int i = 0; i < 2; i++) {
+                        if (r.hit(mx, mY, sx + i * 70, fluidY, SS, SS)) {
+                            d.pressFluidIng.get(i).proxy = s.copy();
+                            return;
+                        }
+                    }
+                } else {
+                    int gridY = editorY + 60, sx = cx - 70;
+                    if (r.hit(mx, mY, sx, gridY, SS, SS)) d.pressIng.set(0, s.copy());
+                    if (r.hit(mx, mY, sx + SS + 50, gridY, SS, SS)) d.pressOuts.set(0, s.copy());
+                }
+            }
             case CRUSHING -> { int cy=editorY+50, sx4=cx-120, outX=sx4+SS+30, colW=110; if(r.hit(mx,mY,sx4,cy,SS,SS)){d.crushIn=s.copy();return;} for(int i=0;i<8;i++) if(r.hit(mx,mY,outX+(i/4)*colW,cy+(i%4)*(SS+12),SS,SS)){d.crushOuts.get(i).stack=s.copy();return;} }
             case FAN      -> { int cy=editorY+50, sx5=cx-120, outX=sx5+SS+30, colW=110; if(r.hit(mx,mY,sx5,cy,SS,SS)){d.fanIn=s.copy();return;} for(int i=0;i<4;i++) if(r.hit(mx,mY,outX+(i/2)*colW,cy+(i%2)*(SS+12),SS,SS)){d.fanOuts.get(i).stack=s.copy();return;} }
         }
@@ -748,29 +853,70 @@ public class RecipeEditorScreen extends Screen {
         if (gr != null) {
             List<ItemStack> gl = gridList(t);
             for (int row=0;row<gr[1];row++) for (int col=0;col<gr[0];col++) {
-                int bx=gr[2]+col*(gr[4]+gr[5]), by=gr[3]+row*(gr[4]+gr[5]);
+                int bx=gr[2]+col*(gr[4]+gr[5]), by=gr[3]+row*(gr[4]+gr[6]);
                 if (r.hit(mx,mY,bx,by,gr[4],gr[4])) { gl.set(row*gr[0]+col, ItemStack.EMPTY); return true; }
             }
         }
         int cx = pX + leftW / 2;
         return switch (t) {
             case CRAFTING -> { int cy=editorY+20+30,ax=cx-70+3*(SS+SP)+15,ay=cy+SS+SP; if(r.hit(mx,mY,ax+20,ay-9,SS,SS)){d.craftResult=ItemStack.EMPTY; yield true;} yield false; }
+            case MECH_CRAFTING -> { int cy=editorY+50, sz=16, pad=1, gW=9*(sz+pad), sx=cx-gW/2-40, ay=cy+(9*(sz+pad))/2-4; if(r.hit(mx,mY,sx+gW+15+20,ay-4,SS,SS)){d.craftResult=ItemStack.EMPTY; yield true;} yield false; }
             case FURNACE  -> { int cy=editorY+60; if(r.hit(mx,mY,cx-60,cy,SS,SS)){d.furnIn=ItemStack.EMPTY;yield true;} if(r.hit(mx,mY,cx-60+SS+40,cy,SS,SS)){d.furnOut=ItemStack.EMPTY;yield true;} yield false; }
             case STONECUTTER -> { int cy=editorY+40; if(r.hit(mx,mY,cx-50,cy,SS,SS)){d.stoneIn=ItemStack.EMPTY;yield true;} if(r.hit(mx,mY,cx-50+SS+40,cy,SS,SS)){d.stoneOut=ItemStack.EMPTY;yield true;} yield false; }
             case SMITHING -> {int cy = editorY + 40;int step = SS + 36;int totalW = 3 * step + 20 + SS;int sx = cx - totalW / 2;if (r.hit(mx, mY, sx, cy, SS, SS)) { d.smTemplate = ItemStack.EMPTY; yield true; }if (r.hit(mx, mY, sx + step, cy, SS, SS)) { d.smBase = ItemStack.EMPTY; yield true; }if (r.hit(mx, mY, sx + 2 * step, cy, SS, SS)) { d.smAddition = ItemStack.EMPTY; yield true; }if (r.hit(mx, mY, sx + 3 * step + 16, cy, SS, SS)) { d.smResult = ItemStack.EMPTY; yield true; }yield false;}
             case CRUSHING -> { int cy=editorY+50,sx4=cx-120,outX=sx4+SS+30,colW=110; if(r.hit(mx,mY,sx4,cy,SS,SS)){d.crushIn=ItemStack.EMPTY;yield true;} for(int i=0;i<8;i++) if(r.hit(mx,mY,outX+(i/4)*colW,cy+(i%4)*(SS+12),SS,SS)){d.crushOuts.get(i).stack=ItemStack.EMPTY;yield true;} yield false; }
             case FAN -> { int cy=editorY+50,sx5=cx-120,outX=sx5+SS+30,colW=110; if(r.hit(mx,mY,sx5,cy,SS,SS)){d.fanIn=ItemStack.EMPTY;yield true;} for(int i=0;i<4;i++) if(r.hit(mx,mY,outX+(i/2)*colW,cy+(i%2)*(SS+12),SS,SS)){d.fanOuts.get(i).stack=ItemStack.EMPTY;yield true;} yield false; }
-            case MIXING -> { int cy=editorY+45,sx2=cx-130,fluidY=cy+3*(SS+SP)+20; for(int i=0;i<4;i++){int rr=i/2,cc=i%2;if(r.hit(mx,mY,sx2+cc*70,fluidY+rr*35,SS,SS)){d.mixFluidIng.get(i).proxy=ItemStack.EMPTY;yield true;}} if(r.hit(mx,mY,cx+10,cy,SS,SS)){d.mixResult=ItemStack.EMPTY;yield true;} if(r.hit(mx,mY,cx+70,cy,SS,SS)){d.mixFluidResult.proxy=ItemStack.EMPTY;yield true;} yield false; }
-            case PRESSING -> { int cy=editorY+60,sx3=cx-70; if(r.hit(mx,mY,sx3,cy,SS,SS)){d.pressIn=ItemStack.EMPTY;yield true;} if(r.hit(mx,mY,sx3+SS+50,cy,SS,SS)){d.pressOut=ItemStack.EMPTY;yield true;} if(d.pressBasin&&r.hit(mx,mY,sx3+SS+110,cy,SS,SS)){d.pressFluidOut.proxy=ItemStack.EMPTY;yield true;} yield false; }
+            case MIXING -> { int cy=editorY+45,sx2=cx-130,fluidY=cy+95; for(int i=0;i<4;i++){int rr=i/2,cc=i%2;if(r.hit(mx,mY,sx2+cc*70,fluidY+rr*35,SS,SS)){d.mixFluidIng.get(i).proxy=ItemStack.EMPTY;yield true;}} if(r.hit(mx,mY,cx+10,cy,SS,SS)){d.mixResult=ItemStack.EMPTY;yield true;} if(r.hit(mx,mY,cx+70,cy,SS,SS)){d.mixFluidResult.proxy=ItemStack.EMPTY;yield true;} yield false; }
+            case PRESSING -> {
+                if (d.pressBasin) {
+                    int gridY = editorY + 75, sx = cx - 130, rx = cx + 30;
+                    for (int i = 0; i < 4; i++) {
+                        int col = i % 2, row = i / 2;
+                        if (r.hit(mx, mY, rx + col * (SS + 4), gridY + 5 + row * (SS + 4), SS, SS)) {
+                            d.pressOuts.set(i, ItemStack.EMPTY);
+                            yield true;
+                        }
+                    }
+                    int fluidY = gridY + 95;
+                    for (int i = 0; i < 2; i++) {
+                        if (r.hit(mx, mY, sx + i * 70, fluidY, SS, SS)) {
+                            d.pressFluidIng.get(i).proxy = ItemStack.EMPTY;
+                            yield true;
+                        }
+                    }
+                    yield false;
+                } else {
+                    int gridY = editorY + 60, sx = cx - 70;
+                    if (r.hit(mx, mY, sx, gridY, SS, SS)) { d.pressIng.set(0, ItemStack.EMPTY); yield true; }
+                    if (r.hit(mx, mY, sx + SS + 50, gridY, SS, SS)) { d.pressOuts.set(0, ItemStack.EMPTY); yield true; }
+                    yield false;
+                }
+            }
             default -> false;
         };
     }
 
     private boolean handleEditorClicks(int mx, int mY) {
         StationType t = tabs.get(tabIdx); int cx = pX + leftW / 2;
-        if (t == StationType.PRESSING) { int cy=editorY+20,wa=font.width("Press")+12,wb=font.width("Press + Basin")+12; if(r.hit(mx,mY,cx-60,cy,wa,16)){d.pressBasin=false;return true;} if(r.hit(mx,mY,cx-60+wa+2,cy,wb,16)){d.pressBasin=true;return true;} }
+        if (t == StationType.PRESSING) {
+            int cy=editorY+20,wa=font.width("Press")+12,wb=font.width("Press + Basin")+12;
+            if(r.hit(mx,mY,cx-60,cy,wa,16)){d.pressBasin=false;return true;}
+            if(r.hit(mx,mY,cx-60+wa+2,cy,wb,16)){d.pressBasin=true;return true;}
+            if (d.pressBasin) {
+                int heatY = editorY + 45;
+                int tw = 0;
+                for (String l : d.heatLabels) tw += font.width(l) + 16;
+                int bx = cx - tw / 2;
+                for (int i = 0; i < d.heatLabels.length; i++) {
+                    int bw = font.width(d.heatLabels[i]) + 10;
+                    if (r.hit(mx, mY, bx, heatY, bw, 16)) { d.pressHeat = i; return true; }
+                    bx += bw + 6;
+                }
+            }
+        }
         if (t == StationType.FAN) { int cy=editorY+15,wa=font.width("Washing")+12,wb=font.width("Haunting")+12; if(r.hit(mx,mY,cx-65,cy,wa,16)){d.fanHaunting=false;return true;} if(r.hit(mx,mY,cx-65+wa+2,cy,wb,16)){d.fanHaunting=true;return true;} }
         if (t == StationType.CRAFTING) { int cy=editorY+20,wa=font.width("Shaped")+12,wb=font.width("Shapeless")+12; if(r.hit(mx,mY,cx-70,cy,wa,16)){d.shapeless=false;return true;} if(r.hit(mx,mY,cx-70+wa+2,cy,wb,16)){d.shapeless=true;return true;} }
+        if (t == StationType.MECH_CRAFTING) { int cy=editorY+20,wa=font.width("Mirrored")+12,wb=font.width("Exact")+12; if(r.hit(mx,mY,cx-60,cy,wa,16)){d.mechMirrored=true;return true;} if(r.hit(mx,mY,cx-60+wa+2,cy,wb,16)){d.mechMirrored=false;return true;} }
         if (t == StationType.FURNACE) { int cy=editorY+20; int tw=0; for(String l:d.furnLabels) tw+=font.width(l)+16; int bx=cx-tw/2; for(int i=0;i<d.furnLabels.length;i++){int bw=font.width(d.furnLabels[i])+10; if(r.hit(mx,mY,bx,cy,bw,16)){d.furnSubIdx=i;return true;} bx+=bw+6;} }
         if (t == StationType.MIXING) { int cy=editorY+15; int tw=0; for(String l:d.heatLabels) tw+=font.width(l)+16; int bx=cx-tw/2; for(int i=0;i<d.heatLabels.length;i++){int bw=font.width(d.heatLabels[i])+10; if(r.hit(mx,mY,bx,cy,bw,16)){d.mixHeat=i;return true;} bx+=bw+6;} }
         if (t == StationType.CRUSHING) { int cy=editorY+15,wa=font.width("Crushing")+12,wb=font.width("Milling")+12; if(r.hit(mx,mY,cx-55,cy,wa,16)){d.isMilling=false;return true;} if(r.hit(mx,mY,cx-55+wa+2,cy,wb,16)){d.isMilling=true;return true;} }
@@ -780,12 +926,53 @@ public class RecipeEditorScreen extends Screen {
     private boolean handleSpinnerClicks(int mx, int mY) {
         StationType t = tabs.get(tabIdx); int cx = pX + leftW / 2;
         if (t==StationType.CRAFTING) { int cy=editorY+50,ax=cx-70+3*(SS+SP)+15,rx=ax+20,cpx=rx+SS+6,cpy=cy+SS+SP-7; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.craftCount=Math.min(64,d.craftCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.craftCount=Math.max(1,d.craftCount-1);return true;} }
-        if (t==StationType.MECH_CRAFTING) { int cy=editorY+20,sz=16,pad=1,gW=9*(sz+pad),sx=cx-gW/2-40,ay=cy+(9*(sz+pad))/2-4,rx=sx+gW+15+20,cpx=rx+SS+6,cpy=ay-2; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.craftCount=Math.min(64,d.craftCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.craftCount=Math.max(1,d.craftCount-1);return true;} }
+        if (t==StationType.MECH_CRAFTING) { int cy=editorY+50,sz=16,pad=1,gW=9*(sz+pad),sx=cx-gW/2-40,ay=cy+(9*(sz+pad))/2-4,rx=sx+gW+15+20,cpx=rx+SS+6,cpy=ay-2; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.craftCount=Math.min(64,d.craftCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.craftCount=Math.max(1,d.craftCount-1);return true;} }
         if (t==StationType.FURNACE) { int cy=editorY+60,sx=cx-60,rx=sx+SS+40,cpx=rx+SS+6,cpy=cy+2; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.furnCount=Math.min(64,d.furnCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.furnCount=Math.max(1,d.furnCount-1);return true;} int xpX=cx-20,xpY=cy+42; if(r.hit(mx,mY,xpX,xpY,10,8)){d.furnXp=Math.min(100f,d.furnXp+0.1f);return true;} if(r.hit(mx,mY,xpX,xpY+8,10,8)){d.furnXp=Math.max(0f,d.furnXp-0.1f);return true;} int tX=cx+80,tY=cy+42; if(r.hit(mx,mY,tX,tY,10,8)){d.furnTime=Math.min(10000,d.furnTime+50);return true;} if(r.hit(mx,mY,tX,tY+8,10,8)){d.furnTime=Math.max(10,d.furnTime-50);return true;} }
         if (t==StationType.STONECUTTER) { int cy=editorY+40,sx=cx-50,rx=sx+SS+40,cpx=rx+SS+6,cpy=cy+2; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.stoneCount=Math.min(64,d.stoneCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.stoneCount=Math.max(1,d.stoneCount-1);return true;} }
         if (t == StationType.SMITHING) {int cy = editorY + 40;int step = SS + 36;int totalW = 3 * step + 20 + SS;int sx = cx - totalW / 2;int rx = sx + 3 * step + 16;int cpx = rx + SS + 6;int cpy = cy + 2;if (r.hit(mx, mY, cpx + 18, cpy, 10, 8)) { d.smCount = Math.min(64, d.smCount + 1); return true; }if (r.hit(mx, mY, cpx + 18, cpy + 8, 10, 8)) { d.smCount = Math.max(1, d.smCount - 1); return true; }}
-        if (t==StationType.MIXING) { int cy=editorY+45,rx=cx+10,cpx=rx+SS+6,cpy=cy+2; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.mixCount=Math.min(64,d.mixCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.mixCount=Math.max(1,d.mixCount-1);return true;} int fluidY=cy+3*(SS+SP)+20,tX=cx+55,tY=fluidY+2*35+12; if(r.hit(mx,mY,tX,tY,10,8)){d.mixTime=Math.min(10000,d.mixTime+10);return true;} if(r.hit(mx,mY,tX,tY+8,10,8)){d.mixTime=Math.max(10,d.mixTime-10);return true;} }
-        if (t==StationType.PRESSING) { int cy=editorY+60,sx=cx-70,rx=sx+SS+50,cpx=rx+SS+6,cpy=cy+2; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.pressCount=Math.min(64,d.pressCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.pressCount=Math.max(1,d.pressCount-1);return true;} int tX=cx+55,tY=cy+SS+32; if(r.hit(mx,mY,tX,tY,10,8)){d.pressTime=Math.min(10000,d.pressTime+10);return true;} if(r.hit(mx,mY,tX,tY+8,10,8)){d.pressTime=Math.max(10,d.pressTime-10);return true;} }
+        if (t==StationType.MIXING) { int cy=editorY+45,rx=cx+10,cpx=rx+SS+6,cpy=cy+2; if(r.hit(mx,mY,cpx+18,cpy,10,8)){d.mixCount=Math.min(64,d.mixCount+1);return true;} if(r.hit(mx,mY,cpx+18,cpy+8,10,8)){d.mixCount=Math.max(1,d.mixCount-1);return true;} int fluidY=cy+95,tX=cx+55,tY=fluidY+2*35+12; if(r.hit(mx,mY,tX,tY,10,8)){d.mixTime=Math.min(10000,d.mixTime+10);return true;} if(r.hit(mx,mY,tX,tY+8,10,8)){d.mixTime=Math.max(10,d.mixTime-10);return true;} }
+        if (t==StationType.PRESSING) {
+            if (d.pressBasin) {
+                int gridY = editorY + 75;
+                int fluidY = gridY + 95, tX = cx + 55, tY = fluidY + 35 + 12;
+                if (r.hit(mx, mY, tX, tY, 10, 8)) { d.pressTime = Math.min(10000, d.pressTime + 10); return true; }
+                if (r.hit(mx, mY, tX, tY + 8, 10, 8)) { d.pressTime = Math.max(10, d.pressTime - 10); return true; }
+            } else {
+                int gridY = editorY + 60, sx = cx - 70, rx = sx + SS + 50, cpx = rx + SS + 6, cpy = gridY + 2;
+                if (r.hit(mx, mY, cpx+18, cpy, 10, 8)) { d.pressCount = Math.min(64, d.pressCount + 1); return true; }
+                if (r.hit(mx, mY, cpx+18, cpy+8, 10, 8)) { d.pressCount = Math.max(1, d.pressCount - 1); return true; }
+                int tX = cx + 55, tY = gridY + SS + 32;
+                if (r.hit(mx, mY, tX, tY, 10, 8)) { d.pressTime = Math.min(10000, d.pressTime + 10); return true; }
+                if (r.hit(mx, mY, tX, tY+8, 10, 8)) { d.pressTime = Math.max(10, d.pressTime - 10); return true; }
+            }
+        }
+        if (t == StationType.MIXING || (t == StationType.PRESSING && d.pressBasin)) {
+            int[] gr = gridParams(t);
+            if (gr != null && gr[5] >= 24) {
+                List<ItemStack> gl = gridList(t);
+                for (int row = 0; row < gr[1]; row++) {
+                    for (int col = 0; col < gr[0]; col++) {
+                        int idx = row * gr[0] + col;
+                        if (idx < gl.size()) {
+                            ItemStack s = gl.get(idx);
+                            if (!s.isEmpty()) {
+                                int bx = gr[2] + col * (gr[4] + gr[5]), by = gr[3] + row * (gr[4] + gr[6]);
+                                int cpx = bx + gr[4] + 2, cpy = by + 2;
+                                int spinnerX = cpx + 14, spinnerY = cpy - 2;
+                                if (r.hit(mx, mY, spinnerX, spinnerY, 9, 9)) {
+                                    s.setCount(Math.min(64, s.getCount() + 1));
+                                    return true;
+                                }
+                                if (r.hit(mx, mY, spinnerX, spinnerY + 9, 9, 9)) {
+                                    s.setCount(Math.max(1, s.getCount() - 1));
+                                    return true;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
         if (t==StationType.CRUSHING) { int cy=editorY+50,outX=cx-120+SS+30,colW=110; for(int i=0;i<8;i++){CrushingOutput co=d.crushOuts.get(i);int ox=outX+(i/4)*colW,oy=cy+(i%4)*(SS+12),cpx=ox+SS+4,cpy=oy+2,chX=cpx+30; if(r.hit(mx,mY,cpx+16,cpy-2,9,9)){co.count=Math.min(64,co.count+1);return true;} if(r.hit(mx,mY,cpx+16,cpy+7,9,9)){co.count=Math.max(1,co.count-1);return true;} if(r.hit(mx,mY,chX,cpy-2,9,9)){co.chance=Math.min(1f,co.chance+0.05f);return true;} if(r.hit(mx,mY,chX,cpy+7,9,9)){co.chance=Math.max(0.05f,co.chance-0.05f);return true;}} int tX=cx+55,tY=cy+4*(SS+12)+12; if(r.hit(mx,mY,tX,tY,10,8)){d.crushTime=Math.min(10000,d.crushTime+10);return true;} if(r.hit(mx,mY,tX,tY+8,10,8)){d.crushTime=Math.max(10,d.crushTime-10);return true;} }
         if (t==StationType.FAN) { int cy=editorY+50,outX=cx-120+SS+30,colW=110; for(int i=0;i<4;i++){CrushingOutput co=d.fanOuts.get(i);int ox=outX+(i/2)*colW,oy=cy+(i%2)*(SS+12),cpx=ox+SS+4,cpy=oy+2,chX=cpx+30; if(r.hit(mx,mY,cpx+16,cpy-2,9,9)){co.count=Math.min(64,co.count+1);return true;} if(r.hit(mx,mY,cpx+16,cpy+7,9,9)){co.count=Math.max(1,co.count-1);return true;} if(r.hit(mx,mY,chX,cpy-2,9,9)){co.chance=Math.min(1f,co.chance+0.05f);return true;} if(r.hit(mx,mY,chX,cpy+7,9,9)){co.chance=Math.max(0.05f,co.chance-0.05f);return true;}} int tX=cx+55,tY=cy+2*(SS+12)+12; if(r.hit(mx,mY,tX,tY,10,8)){d.fanTime=Math.min(10000,d.fanTime+10);return true;} if(r.hit(mx,mY,tX,tY+8,10,8)){d.fanTime=Math.max(10,d.fanTime-10);return true;} }
         return false;
@@ -794,23 +981,169 @@ public class RecipeEditorScreen extends Screen {
     private boolean handleFluidSpins(int mx, int mY) {
         int cx = pX + leftW / 2;
         if (tabs.get(tabIdx) == StationType.MIXING) {
-            int cy=editorY+45, sx=cx-130, fluidY=cy+3*(SS+SP)+20;
-            for (int i=0;i<4;i++) { FluidEntry f=d.mixFluidIng.get(i); int rr=i/2,cc=i%2, amtX=sx+cc*70+SS+4, amtY=fluidY+rr*35+4; if(r.hit(mx,mY,amtX-2,amtY+12,10,8)){f.amount=Math.min(100000,f.amount+250);return true;} if(r.hit(mx,mY,amtX+10,amtY+12,10,8)){f.amount=Math.max(1,f.amount-250);return true;} }
-            int rfx=cx+70, amtX=rfx+SS+4, amtY=cy+4; if(r.hit(mx,mY,amtX-2,amtY+12,10,8)){d.mixFluidResult.amount=Math.min(100000,d.mixFluidResult.amount+250);return true;} if(r.hit(mx,mY,amtX+10,amtY+12,10,8)){d.mixFluidResult.amount=Math.max(1,d.mixFluidResult.amount-250);return true;}
+            int cy=editorY+45, sx=cx-130, fluidY=cy+95;
+            for (int i=0;i<4;i++) { FluidEntry f=d.mixFluidIng.get(i); int rr=i/2,cc=i%2, amtX=sx+cc*70+SS+4, amtY=fluidY+rr*35+4; if(r.hit(mx,mY,amtX-2,amtY+12,10,8)){f.amount=Math.clamp(f.amount+250, 1, 1000);return true;} if(r.hit(mx,mY,amtX+10,amtY+12,10,8)){f.amount=Math.clamp(f.amount-250, 1, 1000);return true;} }
+            int rfx=cx+70, amtX=rfx+SS+4, amtY=cy+4; if(r.hit(mx,mY,amtX-2,amtY+12,10,8)){d.mixFluidResult.amount=Math.clamp(d.mixFluidResult.amount+250, 1, 1000);return true;} if(r.hit(mx,mY,amtX+10,amtY+12,10,8)){d.mixFluidResult.amount=Math.clamp(d.mixFluidResult.amount-250, 1, 1000);return true;}
         }
         if (tabs.get(tabIdx) == StationType.PRESSING && d.pressBasin) {
-            int cy=editorY+60, sx=cx-70, rfx=sx+SS+110, amtX=rfx+SS+4, amtY=cy+4; if(r.hit(mx,mY,amtX-2,amtY+12,10,8)){d.pressFluidOut.amount=Math.min(100000,d.pressFluidOut.amount+250);return true;} if(r.hit(mx,mY,amtX+10,amtY+12,10,8)){d.pressFluidOut.amount=Math.max(1,d.pressFluidOut.amount-250);return true;}
+            int gridY = editorY + 75, sx = cx - 130, fluidY = gridY + 95;
+            for (int i = 0; i < 2; i++) {
+                FluidEntry f = d.pressFluidIng.get(i);
+                int amtX = sx + i * 70 + SS + 4, amtY = fluidY + 4;
+                if (r.hit(mx, mY, amtX - 2, amtY + 12, 10, 8)) { f.amount = Math.clamp(f.amount + 250, 1, 1000); return true; }
+                if (r.hit(mx, mY, amtX + 10, amtY + 12, 10, 8)) { f.amount = Math.clamp(f.amount - 250, 1, 1000); return true; }
+            }
         }
         return false;
     }
 
     private boolean handleDoubleClick(int mx, int mY) {
         StationType t = tabs.get(tabIdx); int cx = pX + leftW / 2;
-        if (t==StationType.FURNACE) { int cy=editorY+60; if(r.hit(mx,mY,cx-48,cy+42,35,12)){startActiveNumEdit("furnXp",cx-48,cy+42,35,String.format(Locale.ROOT,"%.1f",d.furnXp));return true;} if(r.hit(mx,mY,cx+42,cy+42,35,12)){startActiveNumEdit("furnTime",cx+42,cy+42,35,String.valueOf(d.furnTime));return true;} }
-        if (t==StationType.MIXING) { int cy=editorY+45, fluidY=cy+3*(SS+SP)+20, sx=cx-130; for(int i=0;i<4;i++){int rr=i/2,cc=i%2,amtX=sx+cc*70+SS+4,amtY=fluidY+rr*35+4; if(r.hit(mx,mY,amtX-2,amtY-2,45,12)){startActiveNumEdit("fluid_mix_in",amtX-2,amtY-2,45,String.valueOf(d.mixFluidIng.get(i).amount),i);return true;}} int rfx=cx+70,amtX=rfx+SS+4,amtY=cy+4; if(r.hit(mx,mY,amtX-2,amtY-2,45,12)){startActiveNumEdit("fluid_mix_out",amtX-2,amtY-2,45,String.valueOf(d.mixFluidResult.amount));return true;} int oy=fluidY+2*35+10; if(r.hit(mx,mY,cx+12,oy+2,35,12)){startActiveNumEdit("mixTime",cx+12,oy+2,35,String.valueOf(d.mixTime));return true;} }
-        if (t==StationType.PRESSING) { int cy=editorY+60,oy=cy+SS+30; if(r.hit(mx,mY,cx+12,oy+2,35,12)){startActiveNumEdit("pressTime",cx+12,oy+2,35,String.valueOf(d.pressTime));return true;} }
-        if (t==StationType.CRUSHING) { int cy=editorY+50,oy=cy+4*(SS+12)+10; if(r.hit(mx,mY,cx+12,oy+2,35,12)){startActiveNumEdit("crushTime",cx+12,oy+2,35,String.valueOf(d.crushTime));return true;} }
-        if (t==StationType.FAN) { int cy=editorY+50,oy=cy+2*(SS+12)+10; if(r.hit(mx,mY,cx+12,oy+2,35,12)){startActiveNumEdit("fanTime",cx+12,oy+2,35,String.valueOf(d.fanTime));return true;} }
+        if (t==StationType.CRAFTING) {
+            int cy=editorY+50,ax=cx-70+3*(SS+SP)+15,rx=ax+20,cpx=rx+SS+6,cpy=cy+SS+SP-7;
+            if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                startActiveNumEdit("craftCount", cpx, cpy + 2, 15, String.valueOf(d.craftCount));
+                return true;
+            }
+        }
+        if (t==StationType.MECH_CRAFTING) {
+            int cy=editorY+50,sz=16,pad=1,gW=9*(sz+pad),sx=cx-gW/2-40,ay=cy+(9*(sz+pad))/2-4,rx=sx+gW+15+20,cpx=rx+SS+6,cpy=ay-2;
+            if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                startActiveNumEdit("craftCount", cpx, cpy + 2, 15, String.valueOf(d.craftCount));
+                return true;
+            }
+        }
+        if (t==StationType.FURNACE) {
+            int cy=editorY+60,sx=cx-60,rx=sx+SS+40,cpx=rx+SS+6,cpy=cy+2;
+            if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                startActiveNumEdit("furnCount", cpx, cpy + 2, 15, String.valueOf(d.furnCount));
+                return true;
+            }
+            if(r.hit(mx,mY,cx-48,cy+42,26,12)){startActiveNumEdit("furnXp",cx-48,cy+42,26,String.format(Locale.ROOT,"%.1f",d.furnXp));return true;}
+            if(r.hit(mx,mY,cx+42,cy+42,35,12)){startActiveNumEdit("furnTime",cx+42,cy+42,35,String.valueOf(d.furnTime));return true;}
+        }
+        if (t==StationType.STONECUTTER) {
+            int cy=editorY+40,sx=cx-50,rx=sx+SS+40,cpx=rx+SS+6,cpy=cy+2;
+            if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                startActiveNumEdit("stoneCount", cpx, cpy + 2, 15, String.valueOf(d.stoneCount));
+                return true;
+            }
+        }
+        if (t==StationType.SMITHING) {
+            int cy=editorY+40,step=SS+36,totalW=3*step+20+SS,sx=cx-totalW/2,rx=sx+3*step+16,cpx=rx+SS+6,cpy=cy+2;
+            if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                startActiveNumEdit("smCount", cpx, cpy + 2, 15, String.valueOf(d.smCount));
+                return true;
+            }
+        }
+        if (t==StationType.MIXING) {
+            int cy=editorY+45, fluidY=cy+95, sx=cx-130;
+            for(int i=0;i<4;i++){
+                int rr=i/2,cc=i%2,amtX=sx+cc*70+SS+4,amtY=fluidY+rr*35+4;
+                if(r.hit(mx,mY,amtX-2,amtY-2,45,12)){startActiveNumEdit("fluid_mix_in",amtX-2,amtY-2,45,String.valueOf(d.mixFluidIng.get(i).amount),i);return true;}
+            }
+            int rfx=cx+70,amtX=rfx+SS+4,amtY=cy+4;
+            if(r.hit(mx,mY,amtX-2,amtY-2,45,12)){startActiveNumEdit("fluid_mix_out",amtX-2,amtY-2,45,String.valueOf(d.mixFluidResult.amount));return true;}
+            int oy=fluidY+2*35+10;
+            if(r.hit(mx,mY,cx+12,oy+2,35,12)){startActiveNumEdit("mixTime",cx+12,oy+2,35,String.valueOf(d.mixTime));return true;}
+            int rx=cx+10,cpx=rx+SS+6,cpy=cy+2;
+            if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                startActiveNumEdit("mixCount", cpx, cpy + 2, 15, String.valueOf(d.mixCount));
+                return true;
+            }
+        }
+        if (t==StationType.PRESSING) {
+            if (d.pressBasin) {
+                int gridY = editorY + 75, sx = cx - 130, fluidY = gridY + 95;
+                for (int i = 0; i < 2; i++) {
+                    int amtX = sx + i * 70 + SS + 4, amtY = fluidY + 4;
+                    if (r.hit(mx, mY, amtX - 2, amtY - 2, 45, 12)) {
+                        startActiveNumEdit("fluid_press_in", amtX - 2, amtY - 2, 45, String.valueOf(d.pressFluidIng.get(i).amount), i);
+                        return true;
+                    }
+                }
+                int oy = fluidY + 35 + 10;
+                if (r.hit(mx, mY, cx + 12, oy + 2, 35, 12)) {
+                    startActiveNumEdit("pressTime", cx + 12, oy + 2, 35, String.valueOf(d.pressTime));
+                    return true;
+                }
+            } else {
+                int cy=editorY+60, oy=cy+SS+30;
+                if (r.hit(mx, mY, cx + 12, oy + 2, 35, 12)) {
+                    startActiveNumEdit("pressTime", cx + 12, oy + 2, 35, String.valueOf(d.pressTime));
+                    return true;
+                }
+                int sx = cx - 70, rx = sx + SS + 50, cpx = rx + SS + 6, cpy = cy + 2;
+                if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                    startActiveNumEdit("pressCount", cpx, cpy + 2, 15, String.valueOf(d.pressCount));
+                    return true;
+                }
+            }
+        }
+        if (t == StationType.MIXING || (t == StationType.PRESSING && d.pressBasin)) {
+            int[] gr = gridParams(t);
+            if (gr != null && gr[5] >= 24) {
+                List<ItemStack> gl = gridList(t);
+                for (int row = 0; row < gr[1]; row++) {
+                    for (int col = 0; col < gr[0]; col++) {
+                        int idx = row * gr[0] + col;
+                        if (idx < gl.size()) {
+                            ItemStack s = gl.get(idx);
+                            if (!s.isEmpty()) {
+                                int bx = gr[2] + col * (gr[4] + gr[5]), by = gr[3] + row * (gr[4] + gr[6]);
+                                int cpx = bx + gr[4] + 2, cpy = by + 2;
+                                if (r.hit(mx, mY, cpx, cpy + 2, 12, 12)) {
+                                    startActiveNumEdit("grid_count", cpx, cpy + 2, 13, String.valueOf(s.getCount()), idx);
+                                    return true;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        if (t==StationType.CRUSHING) {
+            int cy=editorY+50, sx=cx-120, outX=sx+SS+30, colW=110;
+            for (int i = 0; i < 8; i++) {
+                CrushingOutput co = d.crushOuts.get(i);
+                if (!co.isEmpty()) {
+                    int ox = outX + (i / 4) * colW, oy = cy + (i % 4) * (SS + 12);
+                    int cpx = ox + SS + 4, cpy = oy + 2;
+                    if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                        startActiveNumEdit("crush_out_count", cpx, cpy + 2, 15, String.valueOf(co.count), i);
+                        return true;
+                    }
+                    int chX = ox + SS + 34;
+                    if (r.hit(mx, mY, chX + 11, cpy + 2, 26, 12)) {
+                        startActiveNumEdit("crush_out_chance", chX + 11, cpy + 2, 26, String.valueOf((int)(co.chance * 100)), i);
+                        return true;
+                    }
+                }
+            }
+            int oy=cy+4*(SS+12)+10;
+            if(r.hit(mx,mY,cx+12,oy+2,35,12)){startActiveNumEdit("crushTime",cx+12,oy+2,35,String.valueOf(d.crushTime));return true;}
+        }
+        if (t==StationType.FAN) {
+            int cy=editorY+50, sx=cx-120, outX=sx+SS+30, colW=110;
+            for (int i = 0; i < 4; i++) {
+                CrushingOutput co = d.fanOuts.get(i);
+                if (!co.isEmpty()) {
+                    int ox = outX + (i / 2) * colW, oy = cy + (i % 2) * (SS + 12);
+                    int cpx = ox + SS + 4, cpy = oy + 2;
+                    if (r.hit(mx, mY, cpx, cpy + 2, 14, 12)) {
+                        startActiveNumEdit("fan_out_count", cpx, cpy + 2, 15, String.valueOf(co.count), i);
+                        return true;
+                    }
+                    int chX = ox + SS + 34;
+                    if (r.hit(mx, mY, chX + 11, cpy + 2, 26, 12)) {
+                        startActiveNumEdit("fan_out_chance", chX + 11, cpy + 2, 26, String.valueOf((int)(co.chance * 100)), i);
+                        return true;
+                    }
+                }
+            }
+            int oy=cy+2*(SS+12)+10;
+            if(r.hit(mx,mY,cx+12,oy+2,35,12)){startActiveNumEdit("fanTime",cx+12,oy+2,35,String.valueOf(d.fanTime));return true;}
+        }
         return false;
     }
 
@@ -820,7 +1153,7 @@ public class RecipeEditorScreen extends Screen {
 
     private void startActiveNumEdit(String field, int bx, int by, int bw, String value, int idx) {
         activeFieldName = field; activeFieldIdx = idx;
-        activeNumEditBox = new EditBox(font, bx, by, bw, 12, Component.empty());
+        activeNumEditBox = new EditBox(font, bx, by - (int)scrollOffset, bw, 12, Component.empty());
         activeNumEditBox.setValue(value); activeNumEditBox.setFocused(true);
         activeNumEditBox.setMaxLength(8);
     }
@@ -836,9 +1169,48 @@ public class RecipeEditorScreen extends Screen {
                 case "pressTime"   -> d.pressTime  = Integer.parseInt(v);
                 case "crushTime"   -> d.crushTime  = Integer.parseInt(v);
                 case "fanTime"     -> d.fanTime    = Integer.parseInt(v);
-                case "fluid_mix_in"  -> { if(activeFieldIdx>=0) d.mixFluidIng.get(activeFieldIdx).amount = Integer.parseInt(v); }
-                case "fluid_mix_out" -> d.mixFluidResult.amount = Integer.parseInt(v);
-                case "fluid_press_out" -> d.pressFluidOut.amount = Integer.parseInt(v);
+                case "fluid_mix_in"  -> { if(activeFieldIdx>=0) d.mixFluidIng.get(activeFieldIdx).amount = Math.clamp(Integer.parseInt(v), 1, 1000); }
+                case "fluid_mix_out" -> d.mixFluidResult.amount = Math.clamp(Integer.parseInt(v), 1, 1000);
+                case "fluid_press_in" -> { if(activeFieldIdx>=0) d.pressFluidIng.get(activeFieldIdx).amount = Math.clamp(Integer.parseInt(v), 1, 1000); }
+                case "craftCount"  -> d.craftCount = Math.clamp(Integer.parseInt(v), 1, 64);
+                case "furnCount"   -> d.furnCount = Math.clamp(Integer.parseInt(v), 1, 64);
+                case "stoneCount"  -> d.stoneCount = Math.clamp(Integer.parseInt(v), 1, 64);
+                case "smCount"     -> d.smCount = Math.clamp(Integer.parseInt(v), 1, 64);
+                case "pressCount"  -> d.pressCount = Math.clamp(Integer.parseInt(v), 1, 64);
+                case "mixCount"    -> d.mixCount = Math.clamp(Integer.parseInt(v), 1, 64);
+                case "grid_count"  -> {
+                    if (activeFieldIdx >= 0) {
+                        List<ItemStack> gl = gridList(tabs.get(tabIdx));
+                        if (activeFieldIdx < gl.size()) {
+                            ItemStack s = gl.get(activeFieldIdx);
+                            if (!s.isEmpty()) {
+                                s.setCount(Math.clamp(Integer.parseInt(v), 1, 64));
+                            }
+                        }
+                    }
+                }
+                case "crush_out_count" -> {
+                    if (activeFieldIdx >= 0 && activeFieldIdx < d.crushOuts.size()) {
+                        d.crushOuts.get(activeFieldIdx).count = Math.clamp(Integer.parseInt(v), 1, 64);
+                    }
+                }
+                case "crush_out_chance" -> {
+                    if (activeFieldIdx >= 0 && activeFieldIdx < d.crushOuts.size()) {
+                        int pct = Math.clamp(Integer.parseInt(v), 1, 100);
+                        d.crushOuts.get(activeFieldIdx).chance = pct / 100f;
+                    }
+                }
+                case "fan_out_count" -> {
+                    if (activeFieldIdx >= 0 && activeFieldIdx < d.fanOuts.size()) {
+                        d.fanOuts.get(activeFieldIdx).count = Math.clamp(Integer.parseInt(v), 1, 64);
+                    }
+                }
+                case "fan_out_chance" -> {
+                    if (activeFieldIdx >= 0 && activeFieldIdx < d.fanOuts.size()) {
+                        int pct = Math.clamp(Integer.parseInt(v), 1, 100);
+                        d.fanOuts.get(activeFieldIdx).chance = pct / 100f;
+                    }
+                }
             }
         } catch (NumberFormatException ignored) {}
         activeNumEditBox = null; activeFieldName = null; activeFieldIdx = -1;
@@ -847,6 +1219,7 @@ public class RecipeEditorScreen extends Screen {
     // ── Slot lookup ───────────────────────────────────────────────────────────
 
     private ItemStack slotAt(int mx, int my) {
+        int cx = pX + leftW / 2;
         int mY = (int)(my + scrollOffset);
         if (r.hit(mx, my, pX, editorY, leftW, editorH)) {
             StationType t = tabs.get(tabIdx);
@@ -854,11 +1227,30 @@ public class RecipeEditorScreen extends Screen {
             if (gr != null) {
                 List<ItemStack> gl = gridList(t);
                 for (int row=0;row<gr[1];row++) for (int col=0;col<gr[0];col++) {
-                    int bx=gr[2]+col*(gr[4]+gr[5]), by=gr[3]+row*(gr[4]+gr[5]);
+                    int bx=gr[2]+col*(gr[4]+gr[5]), by=gr[3]+row*(gr[4]+gr[6]);
                     if (r.hit(mx,mY,bx,by,gr[4],gr[4])) { int idx=row*gr[0]+col; if(idx<gl.size()) return gl.get(idx); }
                 }
             }
             // Individual slots — just return from data directly using same coords as drop()
+            switch (t) {
+                case PRESSING -> {
+                    if (d.pressBasin) {
+                        int gridY = editorY + 75, sx = cx - 130, rx = cx + 30;
+                        for (int i = 0; i < 4; i++) {
+                            int col = i % 2, row = i / 2;
+                            if (r.hit(mx, mY, rx + col * (SS + 4), gridY + 5 + row * (SS + 4), SS, SS)) return d.pressOuts.get(i);
+                        }
+                        int fluidY = gridY + 95;
+                        for (int i = 0; i < 2; i++) {
+                            if (r.hit(mx, mY, sx + i * 70, fluidY, SS, SS)) return d.pressFluidIng.get(i).proxy;
+                        }
+                    } else {
+                        int gridY = editorY + 60, sx = cx - 70;
+                        if (r.hit(mx, mY, sx, gridY, SS, SS)) return d.pressIng.get(0);
+                        if (r.hit(mx, mY, sx + SS + 50, gridY, SS, SS)) return d.pressOuts.get(0);
+                    }
+                }
+            }
         }
         // Bottom area
         int startX = pX + 10;
@@ -896,15 +1288,16 @@ public class RecipeEditorScreen extends Screen {
     private int[] gridParams(StationType t) {
         int cx = pX + leftW / 2;
         return switch (t) {
-            case CRAFTING      -> new int[]{3,3,cx-70,editorY+20+30,SS,SP};
-            case MIXING        -> new int[]{3,3,cx-130,editorY+15+30,SS,SP};
-            case MECH_CRAFTING -> new int[]{9,9,cx-(9*17)/2-40,editorY+20,16,1};
+            case CRAFTING      -> new int[]{3,3,cx-70,editorY+20+30,SS,SP,SP};
+            case MIXING        -> new int[]{3,3,cx-130,editorY+15+30,SS,24,10};
+            case MECH_CRAFTING -> new int[]{9,9,cx-(9*17)/2-40,editorY+50,16,1,1};
+            case PRESSING      -> d.pressBasin ? new int[]{3,3,cx-130,editorY+75,SS,24,10} : null;
             default            -> null;
         };
     }
 
     private List<ItemStack> gridList(StationType t) {
-        return switch (t) { case MECH_CRAFTING -> d.mechGrid; case MIXING -> d.mixIng; default -> d.craftGrid; };
+        return switch (t) { case MECH_CRAFTING -> d.mechGrid; case MIXING -> d.mixIng; case PRESSING -> d.pressIng; default -> d.craftGrid; };
     }
 
     private int bottomContentH() {
